# CerebrasxGamma

./: .env.example  .gitignore  Architecture.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
src/quotesquad/: actions.py  agents.py  auth.py  confidence.py  config.py  db.py  document.py  http_client.py  knowledge.py  local_vendors.py  main.py  market_web.py  money.py  ocr.py  pdf.py  pii.py  public_data.py  readiness.py  repository.py  schemas.py  service.py  synthesis.py  vehicle.py  vendor_directory.py  verification.py
src/quotesquad/routers/: __init__.py  api.py  web.py
src/quotesquad/static/: app.js  forms.css  report.css  responsive.css  styles.css  workbench.css
src/quotesquad/templates/: enterprise.html  index.html  report.html
tests/: conftest.py  test_pipeline.py  test_readiness.py
